chore: update tmux theme to latte

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
 # =============================================================================
-# Tmux Configuration - Modern Setup with Catppuccin Theme
+# Tmux Configuration - Catppuccin Latte Theme
 # =============================================================================
 # This file is managed by dotfiles - https://github.com/sharosoo/dotfile
 
@@ -139,23 +139,28 @@ bind N command-prompt -p "New session name:" "new-session -s '%%'"
 bind R command-prompt -p "Rename session:" "rename-session '%%'"
 
 # -----------------------------------------------------------------------------
-# Theme - Dark Gray with Blue Accent
+# Theme - Catppuccin Latte
 # -----------------------------------------------------------------------------
 
-# Color Palette (dark black/gray with blue tint)
-# bg:      #0d1117 (GitHub dark)
-# bg-alt:  #161b22 (surface)
-# bg-hl:   #21262d (highlight)
-# fg:      #c9d1d9 (text)
-# blue:    #58a6ff (accent)
-# cyan:    #79c0ff (secondary)
-# gray:    #484f58 (muted)
+# Color Palette (Catppuccin Latte)
+# base:     #eff1f5
+# mantle:   #e6e9ef
+# crust:    #dce0e8
+# text:     #4c4f69
+# subtext0: #6c6f85
+# subtext1: #5c5f77
+# surface0: #ccd0da
+# surface1: #bcc0cc
+# surface2: #acb0be
+# blue:     #1e66f5
+# lavender: #7287fd
+# mauve:    #8839ef
 
 # Status bar position
 set -g status-position bottom
 
 # Status bar style
-set -g status-style "bg=#0d1117,fg=#c9d1d9"
+set -g status-style "bg=#eff1f5,fg=#4c4f69"
 
 # Status bar length
 set -g status-left-length 100
@@ -165,31 +170,31 @@ set -g status-right-length 100
 set -g status-interval 1
 
 # Left status: Session name
-set -g status-left "#[fg=#0d1117,bg=#58a6ff,bold] #S #[fg=#58a6ff,bg=#0d1117]"
+set -g status-left "#[fg=#eff1f5,bg=#1e66f5,bold] #S #[fg=#1e66f5,bg=#eff1f5]"
 
 # Right status: Date and time
-set -g status-right "#[fg=#161b22]#[fg=#c9d1d9,bg=#161b22] %Y-%m-%d #[fg=#21262d,bg=#161b22]#[fg=#c9d1d9,bg=#21262d] %H:%M #[fg=#58a6ff,bg=#21262d]#[fg=#0d1117,bg=#58a6ff,bold] #H "
+set -g status-right "#[fg=#e6e9ef]#[fg=#4c4f69,bg=#e6e9ef] %Y-%m-%d #[fg=#ccd0da,bg=#e6e9ef]#[fg=#4c4f69,bg=#ccd0da] %H:%M #[fg=#1e66f5,bg=#ccd0da]#[fg=#eff1f5,bg=#1e66f5,bold] #H "
 
 # Window status
-set -g window-status-format "#[fg=#0d1117,bg=#161b22]#[fg=#8b949e,bg=#161b22] #I #W #[fg=#161b22,bg=#0d1117]"
-set -g window-status-current-format "#[fg=#0d1117,bg=#58a6ff]#[fg=#0d1117,bg=#58a6ff,bold] #I #W #[fg=#58a6ff,bg=#0d1117]"
+set -g window-status-format "#[fg=#eff1f5,bg=#e6e9ef]#[fg=#5c5f77,bg=#e6e9ef] #I #W #[fg=#e6e9ef,bg=#eff1f5]"
+set -g window-status-current-format "#[fg=#eff1f5,bg=#1e66f5]#[fg=#eff1f5,bg=#1e66f5,bold] #I #W #[fg=#1e66f5,bg=#eff1f5]"
 
 # Window status separator
 set -g window-status-separator ""
 
 # Pane border colors
-set -g pane-border-style "fg=#21262d"
-set -g pane-active-border-style "fg=#58a6ff"
+set -g pane-border-style "fg=#ccd0da"
+set -g pane-active-border-style "fg=#1e66f5"
 
 # Message style
-set -g message-style "bg=#161b22,fg=#c9d1d9"
-set -g message-command-style "bg=#161b22,fg=#c9d1d9"
+set -g message-style "bg=#e6e9ef,fg=#4c4f69"
+set -g message-command-style "bg=#e6e9ef,fg=#4c4f69"
 
 # Mode style (copy mode, etc.)
-set -g mode-style "bg=#21262d,fg=#c9d1d9"
+set -g mode-style "bg=#ccd0da,fg=#4c4f69"
 
 # Clock mode
-set -g clock-mode-colour "#58a6ff"
+set -g clock-mode-colour "#1e66f5"
 
 # -----------------------------------------------------------------------------
 # Plugins (TPM - Tmux Plugin Manager)
