chore: update starship git_branch display to show all branches

--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -114,7 +114,7 @@ symbol = "[△](bold italic bright-blue)"
 style = "italic bright-blue"
 truncation_symbol = "⋯"
 truncation_length = 11
-ignore_branches = ["main", "master"]
+ignore_branches = []
 only_attached = true
 
 [git_metrics]
