--- a/ghostty/config
+++ b/ghostty/config
@@ -1,7 +1,7 @@
 # Ghostty Configuration for KDE Plasma Wayland + NVIDIA
 
 # Transparency (0.0 = fully transparent, 1.0 = opaque)
-background-opacity = 0.7
+background-opacity = 1.0
 
 
 # Window decorations (title bar with close/minimize/maximize)
@@ -44,7 +44,7 @@ window-padding-x = 8
 window-padding-y = 8
 
 # Shell configuration
-command = /usr/bin/fish
+command = fish
 
 # Pass ctrl keys to shell (for fish-ai)
 keybind = ctrl+g=unbind
