--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -3,6 +3,7 @@
 
 add_newline = true
 continuation_prompt = "[▸▹ ](dimmed white)"
+command_timeout = 2000
 
 format = """
 $directory\
@@ -156,6 +157,12 @@ detect_folders = ["node_modules"]
 detect_extensions = []
 
 [python]
+python_binary = [
+    ["/usr/bin/python3"],
+    ["/opt/homebrew/bin/python3"],
+    ["python3"],
+    ["python"],
+]
 format = " [py](italic) [${symbol}${version}]($style)"
 symbol = "[⌉](bold bright-blue)⌊ "
 version_format = "${raw}"
