--- a/opencode/oh-my-opencode.jsonc
+++ b/opencode/oh-my-opencode.jsonc
@@ -52,7 +52,7 @@
       "reasoningEffort": "high"
     },
     "librarian": {
-      "model": "openai/gpt-5.3-codex",
+      "model": "openai/gpt-5.3-codex-spark",
       "reasoningEffort": "low"
     },
     "explore": {
