--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@
 # Azure OpenAI (for fish-ai)
 # export AZURE_OPENAI_API_KEY="your-azure-key-here"
 # export AZURE_OPENAI_ENDPOINT="https://your-resource.openai.azure.com"
+# export AZURE_RESOURCE_NAME="your-resource-name"  # e.g. mathkingllmbatch2
 
 # Google AI / Gemini
 # export GOOGLE_AI_API_KEY="your-google-ai-key-here"
