--- a/fish/fish-ai.ini.example
+++ b/fish/fish-ai.ini.example
@@ -6,6 +6,6 @@ language = Korean
 
 [azure]
 provider = azure
-server = https://YOUR_AZURE_ENDPOINT.openai.azure.com
-model = gpt-4
+server = https://mathkingllmbatch2.openai.azure.com
+model = gpt-5.2
 api_key = YOUR_API_KEY_HERE
