Ignore main and master in starship git branch module

--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -115,7 +115,7 @@ symbol = "[△](bold italic bright-blue)"
 style = "italic bright-blue"
 truncation_symbol = "⋯"
 truncation_length = 11
-ignore_branches = []
+ignore_branches = ["main", "master"]
 only_attached = true
 
 [git_metrics]
